# sentinel-kernel

./: .gitignore  BACKLOG.md  BACKLOG_v3.5.md  BLOCKERS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MEGA_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ED25519_DEFAULT_TEST_REPORT.md  GOVERNANCE.md  HOMEPAGE_POLISH_REPORT.md  LICENSE  MAINTAINERS.md  README.md  RELEASE_NOTES_v3.4.md  ROADMAP.md  SECURITY.md  V35_PROGRESS_LOG.md  VISION.md  demo_sovereignty_report.html  pyproject.toml
.claude/: settings.json
.claude/agents/: bsi-auditor.md  protocol-architect.md  security-reviewer.md
.claude/commands/: add-integration.md  bsi-check.md  protocol-review.md  rfc.md  security-audit.md
.claude/rules/: code-style.md  protocol-conventions.md  sovereignty-rules.md  testing.md
.claude/skills/bsi-compliance/: SKILL.md
.claude/skills/sovereignty-check/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  design_partner.md  feature_request.md  integration_request.md  pilot_enquiry.md
.github/workflows/: ci.yml  pages.yml  release.yml  rust.yml
benchmarks/: benchmark_trace.py
demo/: Dockerfile  README.md  demo_app.py  docker-compose.minimal.yml  docker-compose.yml  healthcheck.sh  otel-config.yaml  prometheus.yml
demo/bwi/: README.md  compliance_report.py
demo/qs/: README.md  autonomous_decision_demo.py
docs/: api-stability.md  architecture.md  audit-verification-guide.md  bsi-profile.md  ci-cd-integration.md  co-innovation.md  commercial.md  dora-compliance.md  ecosystem.md  eu-ai-act.md  explainability-art-22.md  getting-started.md  integration-guide.md  landscape.md  migration-v2.md  migration-v3.2.md  nis2-compliance.md  performance.md  project-status.md  provability.md  quickstart.md  real-world-examples.md  releasing.md  repo-governance.md  roadmap.md  schema.md  security-posture.md  sentinel-evidence.md  sovereignty.md  trace-example.json  trademark.md  vision.md  vsnfd-deployment.md
docs/announcements/: 3.3.0-linkedin-post.md
docs/architecture/: v3.5-item-1-causal-context.md  v3.5-item-2-semantic-export.md  v3.5-item-3-retention-policies.md  v3.5-item-4-writeonce-storage.md
docs/architecture-decision-records/: ADR-001-local-first.md  ADR-002-apache2-permanent.md  ADR-003-schema-versioning.md
docs/archive/: migration-v2.md
docs/bsi-pre-engagement/: README.md  ai-act-mapping.md  architecture-overview.md  technical-summary.md  test-evidence.md
docs/content/: sovereign-ai-decision-infrastructure.md  sovereign-ai-infrastructure.md
docs/content-archive/: README.md  sovereign-ai-infrastructure.md
docs/content/archive/: README.md  (+1 more)
docs/lf-europe-application/: README.md
docs/onboarding/: technical-cofounder.md
docs/personas/: auditor.md  compliance-officer.md  developer.md  executive-brief.md  procurement.md  security-ciso.md
docs/preview/: data.json  index.html  platform.html  report.html  runtime-briefing.html
docs/rfcs/: RFC-001-implementation.md  RFC-001-sovereignty-manifest.md
docs/samples/: audit-gap-output.txt
examples/: 01_minimal_trace.py  02_async_trace.py  03_policy_simple_rule.py  04_policy_rego.py  05_kill_switch.py  06_filesystem_storage.py  07_postgresql_storage.py  08_langchain_agent.py  09_otel_export.py  10_manifesto.py  11_compliance_report.py  12_sovereignty_scan.py  13_full_pipeline.py  manifesto_example.py  minimal_trace.py  policy_deny.py  quickstart.py  smoke_test.py
examples/fixtures/: sample_chain.json
examples/policies/: access_control.rego  data_classification.rego  discount_approval.rego  financial_transaction.rego  medical_escalation.rego  mission_safety.rego  procurement_approval.rego
rust-impl/: Cargo.toml  README.md
rust-impl/examples/: basic.rs
rust-impl/src/: lib.rs  manifesto.rs  report.rs  requirements.rs
rust-impl/tests/: integration_test.rs
scripts/: check_doc_dates.py  check_license.py  check_manifesto.py  check_sovereignty.py  check_surfaces.py  generate_preview.py  push.sh  regen_demo_gif.sh  sync_all.py  update_claude_md.py
sentinel/: __init__.py  __main__.py  attest.py  audit.py  cli.py  comply.py  comply_semantic.py  retention.py  trace.py
sentinel/chain/: __init__.py  namespace.py  walker.py
sentinel/ci/: __init__.py  checks.py
sentinel/compliance/: __init__.py  dora.py  euaiact.py  evidence_pack.py  nis2.py  unified.py
sentinel/core/: __init__.py  attestation.py  budget.py  otel_context.py  trace.py  tracer.py
sentinel/crypto/: __init__.py  ed25519_signer.py  pades_signer.py  signing.py  timestamp.py
sentinel/dashboard/: __init__.py  html.py  terminal.py
sentinel/integrations/: __init__.py  autogen.py  crewai.py  django.py  fastapi.py  haystack.py  jupyter.py  langchain.py  langfuse.py  otel.py  prometheus.py
sentinel/manifesto/: __init__.py  base.py
sentinel/pilot/: __init__.py  audit_gap.py  config.py  fixes.py  quickstart.py  render.py  status.py
sentinel/policy/: __init__.py  evaluator.py
sentinel/scanner/: __init__.py  cicd.py  infrastructure.py  knowledge.py  runtime.py
sentinel/storage/: __init__.py  base.py  filesystem.py  postgres.py  sqlite.py  writeonce_filesystem.py
tests/: test_airgap.py  test_attestation.py  test_branch_coverage.py  test_budget.py  test_chain.py  test_check_scripts.py  test_cli.py  test_cli_audit_comply_v34_1.py  test_cli_ci_check.py  test_compliance.py  test_compliance_dora_nis2.py  test_coverage_100.py  test_coverage_gaps.py  test_crypto_signing.py  test_crypto_timestamp.py  test_dashboard.py  test_demo.py  test_ed25519_signer.py  test_eu_ai_act_fields.py  test_evidence_pack.py  test_examples.py  test_export_import.py  test_integration_autogen.py  test_integration_crewai.py  test_integration_haystack.py  test_integration_jupyter_fastapi_django.py  test_integration_langchain.py  test_integration_langfuse.py  test_integration_otel.py  test_integration_prometheus.py  test_kill_switch.py  test_manifesto.py  test_manifesto_extra.py  test_minimal_flow.py  test_otel_context_bridge.py  test_output_verification.py  test_pades_signer.py  test_pades_timestamp.py  test_pilot.py  test_pilot_status.py  (+17 more)
(+3 files in other folders)
