[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-kernel"
version = "2.2.0"
description = "EU-sovereign decision record layer for AI agents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "AI", "agents", "sovereignty", "EU", "GDPR",
    "decision-trace", "audit", "middleware", "LLM",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

# Zero hard dependencies — works out of the box
dependencies = []

[project.optional-dependencies]
# LangChain callback handler integration
langchain = ["langchain-core>=0.1"]

# Haystack integration (deepset GmbH, Berlin — EU-sovereign)
haystack = ["haystack-ai>=2.0"]

# Anthropic integration
anthropic = ["anthropic>=0.25"]

# OpenAI integration
openai = ["openai>=1.0"]

# OPA-based policy evaluation
opa = []  # Requires OPA binary: https://www.openpolicyagent.org/

# PostgreSQL storage backend
postgres = ["psycopg2-binary>=2.9"]

# OpenTelemetry export
otel = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

# LangFuse enrichment
langfuse = ["langfuse>=2.0"]

# Prometheus textfile exporter (CNCF, neutral)
prometheus = ["prometheus-client>=0.19"]

# Jupyter notebook widget
jupyter = ["ipywidgets>=8.0", "IPython>=8.0"]

# FastAPI / Starlette middleware
fastapi = ["starlette>=0.30"]

# Django middleware
django = ["Django>=4.2"]

# CrewAI integration (US-owned library; runtime uses local LLM)
crewai = ["crewai>=0.1"]

# Microsoft AutoGen integration (US-owned; runtime uses local LLM)
autogen = ["pyautogen>=0.2"]

# Quantum-safe signing (ML-DSA-65 via liboqs)
pqc = ["oqs-python>=0.8"]

# Development — pulls every optional extra so `pytest --cov` hits the
# happy-path branches of all optional-dep guards.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "hatch>=1.9",
    "rich>=13.0",
    "prometheus-client>=0.19",
    "langchain-core>=0.1",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "langfuse>=2.0",
    "psycopg2-binary>=2.9",
    "ipywidgets>=8.0",
    "starlette>=0.30",
    "Django>=4.2",
    "httpx>=0.27",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[project.urls]
Homepage = "https://github.com/sebastianweiss83/sentinel-kernel"
Documentation = "https://github.com/sebastianweiss83/sentinel-kernel/tree/main/docs"
Repository = "https://github.com/sebastianweiss83/sentinel-kernel"
Issues = "https://github.com/sebastianweiss83/sentinel-kernel/issues"
Changelog = "https://github.com/sebastianweiss83/sentinel-kernel/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[tool.hatch.envs.default]
dependencies = [
    "sentinel-kernel[dev,anthropic,openai,langchain,otel]",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "dist", "build", ".ruff_cache", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=sentinel --cov-report=term-missing"

[tool.coverage.run]
source = ["sentinel"]
omit = ["tests/*", "examples/*"]
